<resources>
    <string name="app_name">WorkerAnt</string>
    <string name="boton">Ingresar</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="validar">Validar Contraseña</string>
    <string name="registro">Registrate</string>
    <string name="cuenta">Crear Cuenta</string>
    <string name="email">Correo: </string>
    <string name="telefono">Movil: </string>
    <string name="Micuenta">Mi cuenta</string>
    <string name="Busque">Busqueda</string>
    <string name="Acerca">A cerca de nosotros</string>
    <string name="logout">Cerrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Etiqueta">Información Personal</string>
    <string name="Nombres">Nombre(s): </string>
    <string name="ApellidoP">Apellido Paterno: </string>
    <string name="ApellidoM">Apellido Materno: </string>
    <string name="Direccion">Dirección: </string>
    <string name="Ciudad">Ciudad: </string>
    <string name="estado">Estado: </string>
    <string name="pais">País: </string>
    <string name="fecha">Fecha de nacimiento</string>
    <string name="botonGuardar">Guardar</string>
    <!-- SECCIÓN DEL FRAGMENTO EXPERIENCIA: Strings del fragmento -->
    <string name="textoExperiencia">Experiencia Profesional.</string>
    <string name="nivel">Nivel de Estudios: </string>
    <string name="Titulo">Titulo profesional: </string>
    <string name="Escuela">Escuela: </string>
</resources>